--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "redux-persist": "^6.0.0",
     "reselect": "^4.0.0",
     "sass": "^1.32.11",
+    "styled-components": "^5.2.3",
     "tachyons": "^4.12.0",
     "web-vitals": "^1.0.1"
   },
