--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "firebase": "^8.4.2",
     "lodash.memoize": "^4.1.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
+    "react-bootstrap-carousel": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-image-gallery": "^1.0.9",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
